=================
Changes for Crate
=================

Unreleased
==========

 - Fixed a race condition that could cause a `CREATE TABLE` statement
   immediately after a `DROP TABLE` statement to fail.

 - Fixed a minor memory leak that occurred if custom schemas were deleted.

 - Fixed incorrect comparison in query by IP type

 - Fix: make sure sys.nodes expressions that utilize os/process/network/jvm
   services use the same stats probe per row; previously values derived from
   these services could have been from different probes

2015/06/03 0.49.2
=================

 - Fix: Accounted RAM wasn't freed after distributed grouping queries finished.

 - Added missing cluster settings for request circuit breaker
   and expose them via information schema

 - Made circuit breaker cluster settings settable on runtime
   and renamed the missleading prefix ``node`` to ``indices``.
   Note: This is a backward incompatibility change!

 - Fix: Row count was wrong when a `DELETE FROM` statement on a
   partitioned table hit exact 1 partition.

 - Updated crate-admin to 0.12.1 which includes following changes:

    - updated logo and icons

 - Fixed an error that could occur if the same ``delete from
   <partitoned_table>`` or ``drop table <partitioned_table>`` statement is
   executed concurrently

2015/05/21 0.49.1
=================

 - Optimized ``DELETE FROM <partitioned_table>``

 - Fix: Do not throw exception on querying `sys.shards` while
   unassigned shards are changing

 - Fix: Handle concurrently dropped partitions while collecting rows

 - Fix: Updated es/upstream to prevent errors caused by too many cluster
   state updates when dropping tables with a huge amount of partitions

 - Fixed an issue that caused a node stop to always take up at least 10 seconds

 - Further improved bulk partition creation which can occur during ``COPY
   FROM`` or INSERTS with multi-values into partitioned tables
