@@ -26,12 +26,16 @@ import io.crate.Version;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateRequest;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateResponse;
 import org.elasticsearch.client.Client;
+import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.cluster.ClusterService;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.rest.*;
 import org.elasticsearch.rest.action.support.RestBuilderListener;
+
+import java.io.IOException;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
 import static org.elasticsearch.rest.RestRequest.Method.HEAD;
@@ -42,18 +46,23 @@ public class CrateRestMainAction extends BaseRestHandler {
 
     private final Version version;
     private final RestController controller;
+    private final ClusterName clusterName;
+    private final ClusterService clusterService;
 
     @Inject
     public CrateRestMainAction(Settings settings,
-                               Client client,
                                RestController controller,
+                               ClusterName clusterName,
+                               Client client,
+                               ClusterService clusterService,
                                CrateRestFilter crateRestFilter) {
         super(settings, controller, client);
         this.version = Version.CURRENT;
         this.controller = controller;
+        this.clusterName = clusterName;
+        this.clusterService = clusterService;
         registerHandler();
         controller.registerFilter(crateRestFilter);
-
     }
 
     public void registerHandler() {
@@ -62,46 +71,38 @@ public class CrateRestMainAction extends BaseRestHandler {
     }
 
     @Override
-    public void handleRequest(final RestRequest request, final RestChannel channel, Client client) {
-        ClusterStateRequest clusterStateRequest = new ClusterStateRequest();
-        clusterStateRequest.listenerThreaded(false);
-        clusterStateRequest.masterNodeTimeout(TimeValue.timeValueMillis(0));
-        clusterStateRequest.local(true);
-        clusterStateRequest.clear().blocks(true);
-        client.admin().cluster().state(clusterStateRequest, new RestBuilderListener<ClusterStateResponse>(channel) {
-
-            @Override
-            public RestResponse buildResponse(ClusterStateResponse response, XContentBuilder builder) throws Exception {
-                RestStatus status = RestStatus.OK;
-                if (response.getState().blocks().hasGlobalBlock(RestStatus.SERVICE_UNAVAILABLE)) {
-                    status = RestStatus.SERVICE_UNAVAILABLE;
-                }
-                if (request.method() == RestRequest.Method.HEAD) {
-                    return new BytesRestResponse(status);
-                }
-
-                builder.startObject();
-                builder.field("ok", true);
-                builder.field("status", status.getStatus());
-                if (settings.get("name") != null) {
-                    builder.field("name", settings.get("name"));
-                }
-                builder.startObject("version")
-                        .field("number", version.number())
-                        .field("build_hash", Build.CURRENT.hash())
-                        .field("build_timestamp", Build.CURRENT.timestamp())
-                        .field("build_snapshot", version.snapshot)
-                        .field("es_version", version.esVersion)
-                                // We use the lucene version from lucene constants since
-                                // this includes bugfix release version as well and is already in
-                                // the right format. We can also be sure that the format is maitained
-                                // since this is also recorded in lucene segments and has BW compat
-                        .field("lucene_version", org.apache.lucene.util.Version.LATEST.toString())
-                        .endObject();
-                //builder.field("tagline", "You Know, for Search");
-                builder.endObject();
-                return new BytesRestResponse(RestStatus.OK, builder);
-            }
-        });
+    public void handleRequest(final RestRequest request, final RestChannel channel, Client client) throws IOException {
+        RestStatus status = RestStatus.OK;
+        if (clusterService.state().blocks().hasGlobalBlock(RestStatus.SERVICE_UNAVAILABLE)) {
+            status = RestStatus.SERVICE_UNAVAILABLE;
+        }
+        if (request.method() == RestRequest.Method.HEAD) {
+            channel.sendResponse(new BytesRestResponse(status));
+            return;
+        }
+        XContentBuilder builder = channel.newBuilder();
+        builder.prettyPrint().lfAtEnd();
+        builder.startObject();
+        builder.field("ok", status.equals(RestStatus.OK));
+        builder.field("status", status.getStatus());
+        if (settings.get("name") != null) {
+            builder.field("name", settings.get("name"));
+        }
+        builder.field("cluster_name", clusterName.value());
+        builder.startObject("version")
+                .field("number", version.number())
+                .field("build_hash", Build.CURRENT.hash())
+                .field("build_timestamp", Build.CURRENT.timestamp())
+                .field("build_snapshot", version.snapshot)
+                .field("es_version", version.esVersion)
+                        // We use the lucene version from lucene constants since
+                        // this includes bugfix release version as well and is already in
+                        // the right format. We can also be sure that the format is maitained
+                        // since this is also recorded in lucene segments and has BW compat
+                .field("lucene_version", org.apache.lucene.util.Version.LATEST.toString())
+                .endObject();
+        builder.endObject();
+        channel.sendResponse(new BytesRestResponse(status, builder));
     }
 }
+
